tcb/assets/sass/custom.scss
$breakpoint-medium: 772px;
$breakpoint-large: 1036px;
$breakpoint-custom-large: 1400px;
$breakpoint-small-menu: 900px;

figure {
    text-align: center;

    >figcaption {
        font-style: normal;
        font-weight: 500;
    }
}

.lab-icon {
    &:before {
        background: url(/lib/img/lab.svg) center center no-repeat;
        border: 1px dashed #3DE9F2;
        border-radius: 100%;
        background-size: 32px;
        padding: 20px;
        width: 32px;
        height: 32px;
        content: "";
        vertical-align: top;
        display: inline-block;
    }

    span {
        font-style: normal;
        font-weight: normal;
        background: rgba(0, 0, 0, .8);
    }
}

.email-icon {
    @keyframes anim-glow {
        0% {
            box-shadow: 0 0 rgba(#3DE9F2, 1);
        }

        100% {
            box-shadow: 0 0 5px 10px transparent;
        }
    }

    &:before {
        animation: anim-glow 3s ease infinite;
        border-radius: 100%;
        content: "";
        background: url(/lib/img/email.svg) center center no-repeat;
        background-size: 30px;
        width: 40px;
        height: 40px;
        display: block;
        margin-top: 5px;
        cursor: pointer;

        @-moz-document url-prefix() {
            margin-top: 5px;
        }
    }
}

.p-link--logo {
    &:before {
        background: url('/lib/img/logo.svg') center center no-repeat;
        background-size: 80px;
        display: block;
        width: 70px;
        height: 70px;
        content: "";
        margin-top: 20px;
        margin-right: 5px;
        float: left;
        cursor: pointer;
    }
}

.p-icon--subscribe {
    &:before {
        background: url('/lib/img/mouse.svg') center center no-repeat;
        background-size: 25px;
        display: block;
        width: 25px;
        height: 25px;
        content: "";
        margin-right: 5px;
        float: left;
    }
}

dark-mode-toggle {
    --dark-mode-toggle-light-icon: url(/lib/img/moon.svg);
    --dark-mode-toggle-dark-icon: url(/lib/img/sun.svg);
    --dark-mode-toggle-icon-size: 25px;
}

.blinkers {
    @keyframes blink {
        0% {
            opacity: 0;
        }

        20% {
            opacity: 1;
        }

        100% {
            opacity: 0;
        }
    }

    span {
        margin-left: 2px;
        font-size: 20px;
        animation-name: blink !important;
        animation-duration: 1.5s !important;
        animation-iteration-count: infinite !important;
        animation-fill-mode: both !important;

        &:nth-child(2) {
            animation-delay: .2s !important;
        }

        &:nth-child(3) {
            animation-delay: .4s !important;
        }
    }
}

.page-footer {
    margin-top: 10px;
    // variable set by the theme.
    background-color: var(--bg-banner);

    .decorated-link {
        border-bottom: 1px dotted #00efd1;
    }

    .container {
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        grid-gap: 0;

        a:hover {
            text-decoration: none;
        }

        a {
            img {
                width: 30px;
                height: 30px;

                &.logo {
                    margin-right: 25px;
                }

                &.cc-logo {
                    vertical-align: middle;
                    margin-bottom: 5px;
                }
            }

            &:last-child {
                img.logo {
                    margin-right: 0px;
                }
            }
        }

        div {
            box-sizing: border-box;
            align-self: end;

            &:first-child {
                grid-column: span 12;
            }

            &:nth-child(2) {
                grid-column: span 6;
            }

            &:nth-child(3) {
                grid-column: span 6;
            }

            &:last-child {
                grid-column: span 12;
            }
        }
    }
}

.comments-icon {
    line-height: 50px;
    font-size: 1.2em;
    font-style: normal;

    &:before {
        background: url('/lib/img/comment.svg') center center no-repeat;
        background-size: 50px;
        width: 50px;
        height: 50px;
        content: "";
        margin-right: 5px;
        float: left;
    }
}

// publication styles

@mixin publishing-icons($icon-link) {
    &:before {
        background: url($icon-link) center center no-repeat;
        background-size: 35px;
        width: 35px;
        height: 35px;
        content: "";
        margin-right: 5px;
        vertical-align: middle;
        display: inline-block;
    }
}

.diary-icon {
    @include publishing-icons('/lib/img/diary.svg');
}

.pen-stand-icon {
    @include publishing-icons('/lib/img/pen-stand.svg');
}

.share-icon {
    @include publishing-icons('/lib/img/share.svg');
}

// source code button
.content-button {
    @include publishing-icons('/lib/img/gh_logo.svg');
    padding: 12px;
    background-color: #0E8420;
    font-weight: 600;

    span {
        color: #FFF;
    }

    &:hover {
        text-decoration: none;
    }
}

// publications and profile
.logo-bg {
    position: relative;
    z-index: 0;

    @media (min-width: #{$breakpoint-medium}) {
        &:before {
            content: "";
            position: absolute;
            z-index: -1;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
            background: url('/lib/img/logo.svg') center center no-repeat;
            opacity: 0.1;
        }
    }
}

.publication-img {
    max-height: 400px;
}

.go-top {
    position: fixed;
    bottom: 5px;
    right: 10px;
}

.subscription-footer {
    position: fixed;
    bottom: 5px;
    right: 50px;
}

.buymecoffee-footer {
    position: fixed;
    padding: 0;
    bottom: 5px;
    left: 10px;
    width: auto;
    max-height: 40px;
}

.mvp-footer {
    position: fixed;
    padding: 0;
    bottom: 50px;
    left: 10px;
    width: auto;
    max-height: 58px;
    border-radius: 4px;

    @media (max-width: #{$breakpoint-custom-large}) {
        display: none;
    }
}

.mvp-avatar-footer {
    position: fixed;
    padding: 0;
    bottom: 5px;
    left: 150px;
    width: auto;
    max-height: 40px;
    border-radius: 4px;

    @media (min-width: #{$breakpoint-custom-large}) {
        display: none;
    }
}

.mobile-footer {
    margin-bottom: 40px;

    @media (min-width: #{$breakpoint-large}) {
        margin-bottom: 10px;
    }
}

@media only print {
    .no-print {
        display: none;
    }
}

.dark-mode {
    width: 50px;
    height: 50px;

    @-moz-document url-prefix() {
        margin-left: 10px;
    }

    @media (max-width: #{$breakpoint-small-menu}) {
        margin-left: 15px;
    }
}

.subscribe-btn-top {
    @media (max-width: #{$breakpoint-small-menu}) {
        margin-left: 20px;
        margin-bottom: 5px;

        @-moz-document url-prefix() {
            margin-left: 10px;
        }
    }
}

.unselectable {
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.p-icon--reddit {
    background-image: url(/lib/img/reddit.svg);
}

.p-icon--phone-share {
    background-image: url(/lib/img/phone-share.svg);
    margin-left: -5px;
}

.p-icon--newsletter {
    margin: 0 0 1.2rem 0;
    @include publishing-icons('/lib/img/newsletter.svg');

    &:before {
        background-size: 40px;
        width: 40px;
        height: 40px;
    }
}

// bug fix in template
.post-content {
    word-wrap: break-word;
    word-break: break-word;
}

html,
body {
    scroll-behavior: smooth;
}

a {
    &:visited {
        color: #06c;
    }
}

// In small screen search box hits other controls
.p-search-box {
    @media (max-width: #{$breakpoint-small-menu}) {
        margin-top: 12px !important;
    }
}

blockquote {
    p {
        a {
            background-color: #333;
            padding: 0 3px;
            color: #F99B11;

            &:visited {
                color: #F99B11;
            }
        }
    }
}

// Display image in center if specified in markdown
.post-content p img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

